--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,7 @@
 #root {
-  width: 1920px;
-  /* max-width: 1280px; */
+  max-width: 1920px;
+  max-width: 1280px;
   margin: auto;
-  align-items: center;
   text-align: center;
 /*   background-color: rgba(0, 0, 0, 0.7);
   padding-left: 10rem;
