--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,6 @@
 
   color-scheme: light dark;
   color: rgb(255, 255, 255);
-  background-color: #3a3a3a;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -21,10 +20,9 @@
 
 body{
   margin: 0;
-  display: flex;
 /*   min-width: 320px;
-  min-height: 100vh;
- */}
+ */  min-height: 100vh;
+}
 
 h1 {
   font-size: 3.2em;
@@ -32,13 +30,13 @@ h1 {
 }
 
 .button {
-  border: solid #ffffff;
+  border: solid rgb(153, 0, 255);
 
   background-color: transparent;
 
   font-size: medium;
   font-weight: 600;
-  color: #ffffff;
+  color: rgb(153, 0, 255);
 
   cursor: pointer;
 
@@ -46,16 +44,16 @@ h1 {
 }
 
 .button:hover {  
-  -webkit-box-shadow: 5px 5px 0px -1px #7ed6f3;
-  -moz-box-shadow: 5px 5px 0px -1px #7ed6f3;
-  box-shadow: 5px 5px 0px -1px #7ed6f3;
+  -webkit-box-shadow: 5px 5px 0px -1px  #44ac4c;
+  -moz-box-shadow: 5px 5px 0px -1px  #44ac4c;
+  box-shadow: 5px 5px 0px -1px  #44ac4c;
   translate: -2px -2px;
 }
 
 .button:active {
-  -webkit-box-shadow: 1px 1px 0px 1px #7ed6f3;
-  -moz-box-shadow: 1px 1px 0px 1px #7ed6f3;
-  box-shadow: 1px 1px 0px 1px #7ed6f3;
+  -webkit-box-shadow: 1px 1px 0px 1px  #44ac4c;
+  -moz-box-shadow: 1px 1px 0px 1px  #44ac4c;
+  box-shadow: 1px 1px 0px 1px  #44ac4c;
   translate: 1px 1px;
 }
 
