--- a/client/src/components/generalHome/generalHome.css
+++ b/client/src/components/generalHome/generalHome.css
@@ -3,6 +3,13 @@
   padding: 2rem;
   background-color: rgba(0, 0, 0, 0.8);
 }
+
+.newSerieDivContainer{
+  background-color: rgba(0, 0, 0, 0.8);
+  margin-top: 0px;
+  border-radius: 0px 0px 16px 16px;
+}
+
 .newSerieFormTittleContainer {
   display: flex;
   justify-content: space-evenly;
@@ -16,60 +23,9 @@
 }
 
 .serieContainer {
-  border-top: solid white 1px;
-  margin-bottom: 1rem;
-}
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 16px;
+  margin: 2rem;
 
-.serieTittleContainer {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.checkboxLabel {
-  display: flex;
-  cursor: pointer;
-}
-
-.checkInput {
-  display: none;
-}
-
-.customInput {
-  border: solid #ffffff;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-
-  background-color: transparent;
-
-  font-size: medium;
-  font-weight: 700;
-
-
-  cursor: pointer;
-
-  height: 40px;
-  width: 40px;
-}
-
-.checkImage {
-  width: 35px;
-  height: 35px;
-  display: none;
-}
-
-.checkInput:checked ~ .customInput .checkImage {
-  display: inline;
-}
-
-.checkInput:checked ~ .customInput .inputText {
-  display: none;
-}
-
-.capsContainer{
-  display: flex;
-  justify-content: center;
+  box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.555);
 }
