--- a/client/src/components/nav/nav.css
+++ b/client/src/components/nav/nav.css
@@ -11,29 +11,32 @@
 }
 
 .buttonNav{
-  color: white;
-  border: solid rgb(255, 255, 255);
-
-  background-color: rgba(0, 0, 0, 0);
-
   font-size: medium;
-  font-weight: 600;
+  font-weight: 700;
+
+  padding: 1rem;
 
   cursor: pointer;
 
-  height: 50px;
+  background-color: transparent;
+  color: rgb(255, 255, 255);
+  border: none;
+
+  border-radius: 10px;
+
+  transition:all 0.1s linear;
 }
 
 .buttonNav:hover {  
-  -webkit-box-shadow: 5px 5px 0px -1px #7ed6f3;
-  -moz-box-shadow: 5px 5px 0px -1px #7ed6f3;
-  box-shadow: 5px 5px 0px -1px #7ed6f3;
+  -webkit-box-shadow: 5px 5px 0px -1px  rgb(30, 196, 247);
+  -moz-box-shadow: 5px 5px 0px -1px  rgb(30, 196, 247);
+  box-shadow: 5px 5px 0px -1px  rgb(30, 196, 247);
   translate: -2px -2px;
 }
 
 .buttonNav:active {
-  -webkit-box-shadow: 1px 1px 0px 1px #7ed6f3;
-  -moz-box-shadow: 1px 1px 0px 1px #7ed6f3;
-  box-shadow: 1px 1px 0px 1px #7ed6f3;
+  -webkit-box-shadow: 1px 1px 0px 1px  rgb(30, 196, 247);
+  -moz-box-shadow: 1px 1px 0px 1px  rgb(30, 196, 247);
+  box-shadow: 1px 1px 0px 1px  rgb(30, 196, 247);
   translate: 1px 1px;
 }
