--- a/client/src/components/singInForm/singInForm.css
+++ b/client/src/components/singInForm/singInForm.css
@@ -2,11 +2,15 @@
   max-height: 1080px;
   max-width: 1920px;
   min-height: 700px;
+
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .singInContainer{
+  border-radius: 10px;
+
+  border-top: solid white 3px;
   background-color: rgba(0, 0, 0, 0.8);
 }
