--- a/client/src/components/userDetail/newSerie/newSerie.css
+++ b/client/src/components/userDetail/newSerie/newSerie.css
@@ -1,22 +1,16 @@
+.newSerieFormContainer{
+  margin-top: 0px;
+  border-radius: 0px 0px 10px 10px ;
+  background-color: rgba(0, 0, 0, 0.800);
+}
+
 .newSerieFormTittleContainer {
   display: flex;
   justify-content: space-evenly;
-
   align-items: center;
 }
 
 .newSerieFormInputs {
   display: flex;
   justify-content: space-evenly;
-}
-
-.serieContainer {
-  border-top: solid white 1px;
-  margin-bottom: 1rem;
-}
-
-.serieTittleContainer {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
 }
